<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Select_year4"
    android:layout_margin="8dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/select_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_year"
        android:textSize="25sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/year1r_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year1"
        app:layout_constraintBottom_toTopOf="@+id/year2r_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <Button
        android:id="@+id/year2r_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year2"
        app:layout_constraintTop_toBottomOf="@id/year1r_button"
        app:layout_constraintBottom_toTopOf="@+id/year3r_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/year3r_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year3"
        app:layout_constraintTop_toBottomOf="@id/year2r_button"
        app:layout_constraintBottom_toTopOf="@+id/year4r_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/year4r_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year4"
        app:layout_constraintTop_toBottomOf="@id/year3r_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />
</androidx.constraintlayout.widget.ConstraintLayout>