<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Select_Branch"
    android:layout_margin="8dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/select_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_branch"
        android:textSize="25sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/bcs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bcs"
        app:layout_constraintBottom_toTopOf="@+id/imt_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <Button
        android:id="@+id/imt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imt"
        app:layout_constraintBottom_toTopOf="@id/img_button"
        app:layout_constraintTop_toBottomOf="@id/bcs_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/img_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/img"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imt_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

</androidx.constraintlayout.widget.ConstraintLayout>